--- a/HTML5_CSS3_parte2/produtos.css
+++ b/HTML5_CSS3_parte2/produtos.css
@@ -44,7 +44,7 @@ nav a:hover{
 	text-align: center;
 	width: 30%;
 	vertical-align: top;
-	background: #CCCCCC;
+	/* background: #CCCCCC; */
 	margin: 0 1.5%;
 	padding: 30px 20px;
 	box-sizing: border-box;
