--- a/HTML5_CSS3_parte3/style.css
+++ b/HTML5_CSS3_parte3/style.css
@@ -101,15 +101,60 @@ form{
 	margin: 40px 0;
 }
 
-form label{
+form label, form p, form legend{
 	display: block;
 	font-size: 20px;
 	margin: 0 0 10px;
 }
 
-form input{
+/* form input, form textarea{ */
+	/* display: block; */
+	/* margin: 0 0 20px; */
+	/* padding: 10px 25px; */
+	/* width: 50%; */
+/* } */
+
+.input-padrao{
 	display: block;
 	margin: 0 0 20px;
 	padding: 10px 25px;
 	width: 50%;
 }
+
+.input-checkbox{
+	padding: 20px 0;
+}
+
+.enviar{
+	width: 40%;
+	padding: 15px 0;
+	background: orange;
+	color: white;
+	border: none;
+	border-radius: 15px;
+	transition: 2s all;
+}
+
+.enviar:hover{
+	background: darkorange;
+	/* transform: scale(1.2); */
+	/* transform: rotate(70deg); */
+
+}
+
+table {
+    margin: 20px 0 40px;
+}
+
+thead {
+    background: #555555;
+    color: white;
+    font-weight: bold;
+}
+
+td, th {
+    border: 1px solid #000000;
+    padding: 8px 15px;
+}
+
+
